--- a/style.css
+++ b/style.css
@@ -1,6 +1,24 @@
+html{
+    width: 100%;
+    height: 100%;
+}
+body {
+    width: 100%;
+    height: 100%;   
+    display: flex;
+    align-items: center;
+}
+
 #context {
     padding: 0;
     margin: 0 auto;
     background-color: "#eee";
     display: block;
+}
+
+@media only screen and (max-width: 480px) {
+    #context{
+        width: 200px;
+        height: 50vh;
+    }
 }
